force-app/main/default/objects/Opportunity_Quote_Service_Item__c/Opportunity_Quote_Service_Item__c.object-meta.xml
<CustomObject>
    <description>this holds the services on the quote</description>
    <label>Opportunity Quote Service Item</label>
    <nameField>
        <label>Opportunity Quote Service Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Quote Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>