force-app/main/default/objects/Opportunity_Quote_Service_Item__c/fields/Commission_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_In_Percentage__c</fullName>
    <description>this gives the commission in percentage</description>
    <label>Commission In Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>