force-app/main/default/objects/Opportunity_Quote_Service_Item__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>holds end date of the service</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>