force-app/main/default/objects/Opportunity_Quote_Service_Item__c/fields/Id_Opportunity_Quote__c.field-meta.xml
<CustomField>
    <fullName>Id_Opportunity_Quote__c</fullName>
    <description>id to opp</description>
    <label>Opportunity Quote</label>
    <referenceTo>Opportunity_Quote__c</referenceTo>
    <relationshipLabel>Opportunity Quote Service Items</relationshipLabel>
    <relationshipName>Opportunity_Quote_Service_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>