force-app/main/default/objects/Opportunity_Quote_Service_Item__c/fields/Migration_OppId__c.field-meta.xml
<CustomField>
    <fullName>Migration_OppId__c</fullName>
    <description>this is ued for linking between Quote and Quote line items for batch</description>
    <label>Migration OppId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>