force-app/main/default/objects/Opportunity_Quote_Service_Item__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>