force-app/main/default/objects/Opportunity_Quote_Service_Item__c/recordTypes/AT_Opportunity_Quote_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>AT_Opportunity_Quote_Service_Item</fullName>
    <active>true</active>
    <label>AT Opportunity Quote Service Item</label>
</RecordType>