force-app/main/default/objects/Opportunity_Quote_Service_Item__c/recordTypes/CD_Opportunity_Quote_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>CD_Opportunity_Quote_Service_Item</fullName>
    <active>true</active>
    <label>CD Opportunity Quote Service Item</label>
</RecordType>