force-app/main/default/objects/Opportunity_Quote_Service_Item__c/recordTypes/DH_AU_Opportunity_Quote_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Opportunity_Quote_Service_Item</fullName>
    <active>true</active>
    <label>DH AU Opportunity Quote Service Item</label>
</RecordType>