force-app/main/default/objects/Opportunity_Quote_Service_Item__c/recordTypes/FI_Opportunity_Quote_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>FI_Opportunity_Quote_Service_Item</fullName>
    <active>true</active>
    <label>FI Opportunity Quote Service Item</label>
</RecordType>