force-app/main/default/objects/Opportunity_Quote_Service_Item__c/recordTypes/Talabat_Opportunity_Quote_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Opportunity_Quote_Service_Item</fullName>
    <active>true</active>
    <label>Talabat Opportunity Quote Service Item</label>
</RecordType>