force-app/main/default/objects/Opportunity_Quote_Service_Item__c/recordTypes/UK_Opportunity_Quote_Service_Item.recordType-meta.xml
<RecordType>
    <fullName>UK_Opportunity_Quote_Service_Item</fullName>
    <active>true</active>
    <label>UK Opportunity Quote Service Item</label>
</RecordType>